Geometry Nodes crash when using "Store Named Attribute" with name "id" #98956

Closed
opened 2022-06-17 17:58:56 +02:00 by Lukas Tönne · 10 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.3.0 Alpha, hash: d86af604
Worked: unsure, possibly dfb8c90324 worked (only tested release build, might pass silently)

Short description of error
Using a Store Named Attribute node and setting id as the name of the attribute crashes Blender.

Exact steps for others to reproduce the error

  1. Create geometry nodes on default cube
  2. Insert a Store Named Attribute node
  3. Enter id as the attribute name

It crashes in BuiltinCustomDataLayerProvider::try_delete because the layer_index variable is not initialized if the name does not match any custom attribute.

Callstack: P3013

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.3.0 Alpha, hash: `d86af604` Worked: unsure, possibly dfb8c90324 worked (only tested release build, might pass silently) **Short description of error** Using a *Store Named Attribute* node and setting `id` as the name of the attribute crashes Blender. **Exact steps for others to reproduce the error** 1. Create geometry nodes on default cube 1. Insert a *Store Named Attribute* node 1. Enter `id` as the attribute name It crashes in `BuiltinCustomDataLayerProvider::try_delete` because the `layer_index` variable is not initialized if the name does not match any custom attribute. Callstack: [P3013](https://archive.blender.org/developer/P3013.txt)
Author
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

The fix looks quite simple, still have to compile and test it though.

The fix looks quite simple, still have to compile and test it though.
Hans Goudey self-assigned this 2022-06-22 00:07:56 +02:00

This issue was referenced by 3a5fbf112a

This issue was referenced by 3a5fbf112a0d08a55b9a18928a3d1f318720c285

This issue was referenced by cebc5531e9

This issue was referenced by cebc5531e9445a4f5cc5da85d6c0f0a7dd75fdaa
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I'm not able to repro this (in both 3.2, 3.3). Crash occurs in 3.2 too? Can someone confirm?

I'm not able to repro this (in both 3.2, 3.3). Crash occurs in 3.2 too? Can someone confirm?
Author
Member

It's an uninitialized value, so the crash may be somewhat random.

It's an uninitialized value, so the crash may be somewhat random.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98956
No description provided.